# ainulindale

./: .gitignore  README.md
docs/: agent-state.md  agents-and-tools.md  board-execution.md  getting-started.md  indexer.md  rbac-system.md  system-prompt-generation.md
docs/specs/: spec-3d-visual-system.md  spec-component-polish.md  spec-state-visualization.md  spec-style-system.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/e2e-tests/: README.md  package-lock.json  package.json  wdio.conf.js
frontend/e2e-tests/specs/: app.e2e.js  user-journey.e2e.js
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/nickname-api/: Makefile  go.mod
frontend/src-tauri/src/: commands.rs  database.rs  db_commands.rs  lib.rs  main.rs  schema.sql
frontend/src-tauri/src/indexer/: chunker.rs  commands.rs  embedder.rs  mod.rs  store.rs  tree_sitter_parser.rs
frontend/src/components/: SplashScreen.tsx
frontend/src/data/: templates.ts
frontend/src/engine/: board-execution.ts  board-runner.ts  budget-tracker.ts  errors.ts  event-bus.ts  index.ts  indexer-service.ts  types.ts  work-queue.ts
frontend/src/hex/: adjacency.test.ts  adjacency.ts  grid.ts  math.test.ts  math.ts  renderer3d.ts
frontend/src/hooks/: useEventBus.ts  useWorkStatsFromEvents.ts
frontend/src/llm/: client.test.ts  client.ts  index.ts  types.ts
frontend/src/rbac/: index.ts  (+3 more)
(+53 files in other folders)
